--- a/pom.xml
+++ b/pom.xml
@@ -56,14 +56,10 @@
 			<artifactId>lucene-core</artifactId>
 			<version>8.4.0</version>
 		</dependency>
-
-		<dependency>
-			<groupId>com.datastax.cassandra</groupId>
-			<artifactId>cassandra-driver-core</artifactId>
-		</dependency>
 		<dependency>
 			<groupId>com.datastax.cassandra</groupId>
 			<artifactId>cassandra-driver-mapping</artifactId>
+			<version>3.2.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -82,7 +78,10 @@
 			<version>2.8.5</version>
 		</dependency>
 
-		<dependency><groupId>com.datastax.cassandra</groupId><artifactId>cassandra-driver-mapping</artifactId><version>3.2.0</version>
+		<dependency>
+			<groupId>com.datastax.cassandra</groupId>
+			<artifactId>cassandra-driver-mapping</artifactId>
+			<version>3.2.0</version>
 		</dependency>
         <dependency>
             <groupId>org.springframework</groupId>
@@ -101,6 +100,7 @@
 			<artifactId>poi-ooxml</artifactId>
 			<version>4.0.0</version>
 		</dependency>
+
 
 
     </dependencies>
